# mr9-chat-app

./: README.md  index.html
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
