[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http1", "http2", "macros", "ws", "tracing"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
tower = { version = "0.5.2", features = ["full"] }
